[tool.poetry]
name = "dec-24-code"
version = "0.1.0"
description = ""
authors = ["Artem <63448341+Gilah-EnE@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
mpmath = "^1.3.0"
matplotlib = "^3.10.0"
numpy = "^2.2.2"
scipy = "^1.15.1"
scikit-learn = "^1.6.1"
zstandard = "^0.23.0"
pyparted = "^3.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
