[tool.poetry]
name = "dec-24-code"
version = "0.1.0"
description = ""
authors = ["Artem <63448341+Gilah-EnE@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
mpmath = "^1.3.0"
matplotlib = "^3.10.0"
scipy = "^1.15.1"
scikit-learn = "^1.6.1"
zstandard = "^0.23.0"
line-profiler-pycharm = "^1.2.0"
numpy = "2.1.3"
numba = "^0.61.0"
lz4 = "^4.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
